--- a/css/style.css
+++ b/css/style.css
@@ -4,27 +4,88 @@ html{
 
 body{
   margin: 0;
+  background-color: #1e1e1e;;
 }
 
-header, footer {
-  background-color: #ffa500;
+
+/* This section refers to the header and footer elements */
+
+header{
+  background-color: #242b36;
   text-align: center;
   /* min-width: 500px; */
   min-height: 50vh;
+  /* min-width: 100vh; */
   display:flex;
+  align-items: center;
+  flex-direction: column;
+  flex-grow: 1;
+  flex-shrink: 1;
+  justify-content: space-evenly;
+  border-bottom: 1vh groove #a19393;
 }
+.wrapper {
+  max-width: 1150px;
+  margin: auto;
+  padding: 50px;
+  display: block;
+  padding-bottom: 0;
+}
+
+.bio {
+font-size: calc(1em + .6vw);
+font-family: 'Work Sans';
+text-align: center;
+color: #e7d8d8;
+}
+
+.buttonBox {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.myButton {
+  border-radius: 28px;
+  border: 1px solid #ffffff;
+  cursor: pointer;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 16px 31px;
+  text-decoration: none;
+  margin: 1.69em auto;
+}
+
+.myButton:hover {
+    background-color:#574d8f;
+}
+
+.myButton:active {
+    position:relative;
+    top:1px;
+}
+
+/* This section refers to the main grid elements */
 
 main {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(40%, 1fr) ) ;
   grid-gap: 20px;
   margin-top: 44px;
-  grid-auto-rows: 1fr;
+
   justify-items: center;
   justify-content: center;
   align-items: stretch;
   align-content: center;
+}
+
+h1 {
+  font-family: Poppins;
+  font-size: calc(1em + 3vw);
+  padding-bottom: .67em;
+  border-bottom: 1px solid;
+  line-height: 1.3;
+  color: #e7d8d8;
 }
 
 h2 {
@@ -39,7 +100,9 @@ h2 {
 
 img {
   width: 100%;
-  height: auto;
+  height: 50vh;
+  object-fit: cover;
+
 }
 
 .recipe {
@@ -94,12 +157,29 @@ img {
 }
 
 .container {
-  min-width: 500px;
+  /* min-width: 500px; */
   margin: auto;
 }
 
 footer {
+  border-top: 1vh groove #a19393;
   margin-top: 44px;
+  background-color: #242b36;
+  text-align: center;
+  /* min-width: 500px; */
+  min-height: 13vh;
+  /* min-width: 100vh; */
+  display:flex;
+  align-items: center;
+  flex-direction: column;
+  flex-grow: 1;
+  flex-shrink: 1;
+  justify-content: space-evenly;
+
 }
 
-
+@media all and (max-width:700px) {
+  main {
+    grid-template-columns: 1fr;
+  }
+}
