--- a/css/style.css
+++ b/css/style.css
@@ -114,9 +114,9 @@ h2 {
 }
 
 img {
-  width: 100%;
+  /* width: 100%;
   height: 50vh;
-  object-fit: cover;
+  object-fit: cover; */
 
 }
 
@@ -138,6 +138,7 @@ img {
   padding-top: 10px;
   width: 20px;
   height: auto;
+  display: inline;
 }
 
 .mins {
