--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ header{
 
 .bio {
 font-size: calc(1em + .6vw);
-font-family: 'Work Sans';
+font-family: 'Roboto', sans-serif;
 text-align: center;
 color: #e7d8d8;
 }
@@ -95,7 +95,7 @@ main {
 }
 
 h1 {
-  font-family: Poppins;
+  font-family: 'Roboto Slab', sans-serif;
   font-size: calc(1em + 3vw);
   padding-bottom: .67em;
   border-bottom: 1px solid;
@@ -104,8 +104,8 @@ h1 {
 }
 
 h2 {
-  font-family: Poppins;
-  font-size: 18px;
+  font-family: 'Roboto Slab', sans-serif;
+  font-size: 23px;
   font-weight: 600;
   letter-spacing: 0.3px;
   text-align: left;
@@ -114,11 +114,6 @@ h2 {
 }
 
 h2 a:link{
-  font-family: Poppins;
-  font-size: 18px;
-  font-weight: 600;
-  letter-spacing: 0.3px;
-  text-align: left;
   color: #5e7898;
 }
 
@@ -156,7 +151,7 @@ img {
 
 .mins {
   display: inline-block;
-  font-family: Poppins;
+  font-family: 'Roboto Slab', sans-serif;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 0.3px;
@@ -167,8 +162,8 @@ img {
 }
 
 .description {
-  font-family: Work Sans;
-  font-size: 14px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
   font-weight: 300;
   line-height: 1.29;
   letter-spacing: 0.1px;
@@ -214,7 +209,7 @@ footer {
   justify-content: space-evenly;
 
   font-size: calc(.8em + .2vw);
-  font-family: 'Work Sans';
+  font-family: 'Roboto', sans-serif;
   text-align: center;
   color: #e7d8d8;
 
