--- a/css/style.css
+++ b/css/style.css
@@ -130,22 +130,6 @@ h2 a:hover {
   color: #574d8f;
 }
 
-img {
-  /* width: 100%;
-  height: 50vh;
-  object-fit: cover; */
-
-}
-
-.recipe {
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.5);
-  width: 100%;
-}
-
-.a {}
-
-.c {}
-
 .icon {
   padding-left: 10px;
   padding-top: 10px;
@@ -159,7 +143,7 @@ img {
   /* TODO: fix icon color */
 }
 
-.mins {
+.projectType {
   display: inline-block;
   font-family: 'Roboto Slab', sans-serif;
   font-size: 14px;
@@ -190,13 +174,6 @@ img {
 
 .description a:hover {
   color: #574d8f;
-}
-
-.logo {
-  width: 115px;
-  height: 21.1px;
-  object-fit: contain;
-  padding: 20px;
 }
 
 .container {
