--- a/css/style.css
+++ b/css/style.css
@@ -4,18 +4,29 @@ html {
 
 body {
   margin: 0;
-  background-color: #1e1e1e;
+  background-color: #111111;
   ;
 }
 
 
 /* This section refers to the header and footer elements */
 
+.profilepic{
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+  max-width: 25%;
+  border-radius: 50%;
+  /* border-color: white; */
+  border: 3px solid white;
+  box-shadow: 0px 3px 5px 15px rgba(3, 4, 5, 0.1);
+}
+
 header {
   /* background-color: #242b36; */
-  background-image: radial-gradient(rgba(23, 30, 43, 0.9), rgba(23, 30, 43, 0.9)),
-    linear-gradient(rgba(36, 43, 54, .8), rgba(36, 43, 54, .8)),
-    url('../images/header-image.jpg');
+  background-image: radial-gradient(rgba(23, 30, 43, 0.7), rgba(23, 30, 43, 0.5)),
+    linear-gradient(rgba(36, 43, 54, .4), rgba(36, 43, 54, .4)),
+    url('../images/3-29-2023-enlarged.gif');
   background-blend-mode: hard-light, color;
   background-size: cover;
   background-position: right center;
@@ -45,7 +56,8 @@ header {
   font-size: calc(1em + .6vw);
   font-family: 'Roboto', sans-serif;
   text-align: center;
-  color: #f2e3e3;
+  color: white;
+  text-shadow: 0px 5px 15px rgba(3, 4, 5, 0.6);
 }
 
 .buttonBox {
@@ -63,10 +75,11 @@ header {
   padding: 16px 31px;
   text-decoration: none;
   margin: 1.69em auto;
+  text-shadow: 0px 5px 15px rgba(3, 4, 5, 0.6);
 }
 
 .myButton:hover {
-  background-color: #574d8f;
+  background-color: rgba(87, 77, 143, .6);
 }
 
 .myButton:active {
@@ -100,7 +113,7 @@ main {
   width: 100%;
   height: 50vh;
   object-fit: cover;
-  box-shadow: 1px 1px #1e1e1e;
+  box-shadow: 1px 1px #111111;
 }
 
 h1 {
@@ -109,7 +122,8 @@ h1 {
   padding-bottom: .67em;
   border-bottom: 1px solid;
   line-height: 1.3;
-  color: #e7d8d8;
+  color: white;
+  text-shadow: 0px 5px 15px rgba(3, 4, 5, 0.4);
 }
 
 h2 {
