--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
   margin: 0;
-  background-color: #111111;
+  background-color: #141414;
   ;
 }
 
@@ -15,7 +15,8 @@ body {
   /* display: flex;
   align-items: center;
   justify-content: center; */
-  max-width: 25%;
+  /* max-width: 25%; */
+  max-width: calc(15em + .6vw);
   border-radius: 50%;
   /* border-color: white; */
   border: 3px solid white;
@@ -33,6 +34,7 @@ header {
   text-align: center;
 
   /* min-width: 500px; */
+  /* min-height: 100vh; */
   min-height: 100vh;
   /* min-width: 100vh; */
   display: flex;
@@ -53,7 +55,7 @@ header {
 }
 
 .bio {
-  font-size: calc(1em + .6vw);
+  font-size: calc(1em + .4vw);
   font-family: 'Roboto', sans-serif;
   text-align: center;
   color: white;
@@ -113,12 +115,12 @@ main {
   width: 100%;
   height: 50vh;
   object-fit: cover;
-  box-shadow: 1px 1px #111111;
+  box-shadow: 1px 1px #141414;
 }
 
 h1 {
   font-family: 'Roboto Slab', sans-serif;
-  font-size: calc(1em + 3vw);
+  font-size: calc(1em + 2vw);
   padding-bottom: .67em;
   border-bottom: 1px solid;
   line-height: 1.3;
